# spaghettilab

./: .gitignore  CLAUDE.md  LICENSE  README.md  dev.ps1  dev.sh  pyproject.toml  release.ps1  release.sh
.github/workflows/: release.yml
app/: index.html  package-lock.json  package.json  tailwind.config.js
app/src/: App.tsx  api.ts  declarations.d.ts  index.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: AnalysisProgress.tsx  AnnotateSetup.tsx  AnnotateView.tsx  DamageLog.tsx  DrawingOverlay.tsx  DrawingToolbar.tsx  ExportModal.tsx  HealthTimeline.tsx  Highlights.tsx  MatchList.tsx  MatchOverview.tsx  NotesPanel.tsx  RoiPicker.tsx  RoundBreakdown.tsx  Sidebar.tsx  SpagzVideoModal.tsx  SplitVodView.tsx  UpdateBanner.tsx  VideoPlayer.tsx  WelcomeScreen.tsx
config/: default.yaml
docs/: cv-pipeline.md  frontend.md  round-detection.md  tauri-commands.md  vod-splitter.md
replanal/: aggregator.py  config.py  models.py  pipeline.py  roi.py  storage.py  video.py  viz.py
replanal/extractors/: __init__.py  base.py  health.py  round_counter.py  scene.py  tension.py  timer.py
scripts/: analyze_one_set.py  analyze_replay.py  analyze_sets.py  calibrate_roi.py  check_rounds.py  debug_activation.py  debug_cal_scores.py  debug_health_frames.py  debug_p2_cool.py  debug_scene_gap.py  debug_transition.py  find_comebacks.py  split_vod.py  test_calibration.py  validate_rounds.py
tests/: conftest.py  test_health.py  test_roi.py
(+3 files in other folders)
